# invop

./: CMakeLists.txt  README.md
1a/: CMakeLists.txt  main.cpp  problem.cpp
1a/experimentacion/: experimentacion.bc.dir.pre+cov.be.up.txt  experimentacion.bc.dir.pre+cov.dfs.up.txt  experimentacion.bc.heur.pre+cov.dfs.auto.txt  experimentacion.bc.pre+cliq.be_alt.txt  experimentacion.bc.pre+cov.bb.txt  experimentacion.bc.pre.dfs.txt  experimentacion.csv  experimentacion.root_node.cliq.txt  experimentacion.root_node.nada.txt  experimentacion.root_node.pre.txt
1a/include/: problem.hpp
1b/: Ejercicio1b.lp
1c/: Ejercicio1c.lp  Ejercicio1cPrinter.py
1d/: Ejercicio1d.lp  Ejercicio1dPrinter.py
1e/: CMakeLists.txt  coordinates_to_distances.cpp  main.cpp  problem.cpp  problem_instance_input_coordinates.in  problem_instance_input_distances.in
1e/experimentacion/: experimentacion.bc.cliq.be_alt.txt  experimentacion.bc.dir.pre+cliq+cov.down.txt  experimentacion.bc.dir.pre+cliq+cov.up.txt  experimentacion.bc.pre+cliq+cov.be.txt  experimentacion.bc.pre+cliq+cov.be_alt.txt  experimentacion.bc.pre+cliq+cov.dfs.txt  experimentacion.root_node.preproc+cliq+cover.txt  experimentación.txt
1e/include/: coordinates.hpp  problem.hpp
1e/tests/: n2.in  n3.in
CVRP/: CMakeLists.txt  coordinates.cpp  coordinates_to_distances.cpp  main.cpp  problem.cpp  problem_instance_input_coordinates.in  problem_instance_input_distances.in
CVRP/experimentacion/: experimentacion.bc.cliq.bb.txt  experimentacion.bc.cliq.be.txt  experimentacion.bc.cliq.dfs.txt  experimentacion.bc.dir.cliq.be.down.txt  experimentacion.bc.dir.cliq.be.up.txt  experimentacion.bc.dir.nada.be_alt.down.txt  experimentacion.bc.dir.nada.be_alt.up.txt  experimentacion.bc.heur.cliq.be.up.txt  experimentacion.bc.heur.nada.be_alt.up.txt  experimentacion.bc.heur.pre+cliq+cov.up.txt  experimentacion.bc.nada.bb.txt  experimentacion.bc.nada.be.txt  experimentacion.bc.nada.be_alt.txt  experimentacion.bc.nada.dfs.txt  experimentacion.bc.pre+cliq+cov.bb.txt  experimentacion.bc.sol_in.cliq.be.up.txt  experimentacion.bc.sol_in.nada.be_alt.up.txt  experimentacion.bc.sol_in.pre+cliq+cov.dfs.up.txt  experimentacion.csv  experimentacion.root_node.cliq+cover.txt  experimentacion.root_node.cliq.txt  experimentacion.root_node.cover.txt  experimentacion.root_node.nada.txt  experimentacion.root_node.preproc+cliq.txt  experimentacion.root_node.preproc+cover.txt  experimentacion.root_node.preproc.txt
CVRP/include/: problem.hpp
CVRP/tests/: n2.in  n4.in  n5.in
Food_Manufacture/: CMakeLists.txt  main.cpp  problem.cpp  problem_instance.in
Food_Manufacture/experimentacion/: experimentacion.bc.dir.pre+cliq+cov.dfs.down.txt  experimentacion.bc.dir.pre+cliq+cov.dfs.up.txt  experimentacion.bc.dir.pre+cov.be.down.txt  experimentacion.bc.dir.pre+cov.dfs.down.txt  experimentacion.bc.heur.pre+cliq+cov.dfs.auto.txt  experimentacion.bc.heur.pre+cliq+cov.dfs.up.txt  experimentacion.bc.heur.pre+cov.dfs.up.txt  experimentacion.bc.pre+cliq+cov.bb.txt  experimentacion.bc.pre+cliq+cov.be.txt  experimentacion.bc.pre+cliq+cov.be_alt.txt  experimentacion.bc.pre+cliq+cov.dfs.txt  experimentacion.bc.pre+cliq.bb.txt  experimentacion.bc.pre+cliq.be.txt  experimentacion.bc.pre+cliq.dfs.txt  experimentacion.bc.pre+cov.be.txt  experimentacion.bc.pre+cov.be_alt.txt  experimentacion.bc.pre+cov.dfs.txt  experimentacion.bc.pre.bb.txt  experimentacion.bc.pre.be.txt  experimentacion.bc.pre.be_alt.txt  experimentacion.csv  experimentacion.root_node.cliq+cover.txt  experimentacion.root_node.cover.txt  experimentacion.root_node.pre+cliq+cov.txt  experimentacion.root_node.pre+cliq.txt  experimentacion.root_node.pre+cov.txt  experimentacion.txt
Food_Manufacture/include/: problem.hpp
Food_Manufacture/tests/: v1_o1_m2.in
